--- a/index.html
+++ b/index.html
@@ -15,5 +15,16 @@
 	<h2>Course Catalog Description:</h2>
 	<p>This course will cover the creation of Web pages and sites using HTML, CSS, Javascript and graphical applications. Networked multimedia distribution technologies are also explored. The design of effective Web site including page layout, user interface design, graphic design, content flow and site structure as well as management of Web site resources including intranet management and design considerations are addressed. Students design and create a major Web site with multiple pages cross-linked structures. <strong>Prerequisites</strong>: [none] <strong>Credit</strong>: 2-2-3 Semester Hours
 	<h2>Course Outcomes:</h2>
+	<p>Students completing this course will be able to:</p>
+	<ul>Recognize HTML, CSS and JavaScript mark-up and code in a web page/application.</ul>
+	<ul>Select the proper mark-up tags or code to achieve a particular result.</ul>
+	<ul>Identify improperly used mark-upand code.</ul>
+	<ul>Produce modern standards complaint web pages.</ul>
+	<ul>Deploy web pages to a public server.</ul>
+	<h2>Course Objectives:</h2>
+	<p>At the conclusion of this course, each successful student will be able to:</p>
+	<ul>Explain the client and server architecture of the Internet and related web technologies.</ul>
+	<ul>Use a basic text editor and other software tools to create web pages using HTML, CSS, JavaScript, jQuery, and images.</ul>
+	<ul>Deploy web pages to a Linux-based web server using sftp.</ul>
 </body>
 </html>
